[package]
name = "uptimeproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "^1" }
tokio = { version = "^1", features = ["rt-multi-thread"] }
prometheus-http-query = { version = "^0.6" }
figment = { version = "^0.10", features = ["env"] }
serde = { version = "^1" }
lazy_static = { version = "^1" }
